Fix feature overflow visual bug

--- a/src/app/components/search/search-result.scss
+++ b/src/app/components/search/search-result.scss
@@ -28,6 +28,7 @@
   .result-features {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 8px;
 
     .result-feature {
